
[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "runner"
path = "src/runner/src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
uds_windows = "1"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
  "Win32_Security",
] }
