
[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "runner"
path = "src/runner/src/main.rs"

[[bin]]
name = "ethereal-sign"
path = "src/sign/src/main.rs"
required-features = ["sign"]

[features]
default = []
sign = ["ml-dsa/rand_core", "dep:rand"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
ml-dsa = { version = "0.1", default-features = false }
rand = { version = "0.9", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
uds_windows = "1"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
  "Win32_Security",
] }
